2011-02-13  Alexey Proskuryakov  <ap@apple.com>

Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=54348
        Crash when printing a document with no pages

        * WebProcess/WebPage/WebPage.cpp: (WebKit::WebPage::drawPagesToPDF): Don't fail on a fake
        page that computePagesForPrinting() added to a pageless document.

Canonical link: https://commits.webkit.org/68435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78432 268f45cc-cd09-0410-ab3c-d52691b4dbfc